[gd_scene load_steps=5 format=3 uid="uid://wr5kf0viohud"]

[ext_resource type="Script" path="res://input/Input.gd" id="1_6qnq5"]
[ext_resource type="Script" path="res://input/InputContainer.gd" id="2_2aoob"]
[ext_resource type="Script" path="res://input/10KeyContainer.gd" id="3_btr6u"]
[ext_resource type="Script" path="res://input/CellKeyContainer.gd" id="4_h70he"]

[node name="Input" type="Node2D"]
script = ExtResource("1_6qnq5")

[node name="InputContainer" type="VBoxContainer" parent="."]
offset_right = 180.0
offset_bottom = 213.0
scale = Vector2(4, 4)
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("2_2aoob")

[node name="Submitted" type="Label" parent="InputContainer"]
layout_mode = 2
offset_right = 180.0
offset_bottom = 23.0

[node name="Current" type="Label" parent="InputContainer"]
layout_mode = 2
offset_top = 27.0
offset_right = 180.0
offset_bottom = 50.0

[node name="Submit" type="Button" parent="InputContainer"]
layout_mode = 2
offset_top = 54.0
offset_right = 180.0
offset_bottom = 85.0
text = "SEND"

[node name="HBoxContainer" type="HBoxContainer" parent="InputContainer"]
layout_mode = 2
offset_top = 89.0
offset_right = 180.0
offset_bottom = 89.0
theme_override_constants/separation = 5

[node name="TenKeyContainer" type="GridContainer" parent="InputContainer/HBoxContainer"]
visible = false
layout_mode = 2
offset_left = 61.0
offset_right = 61.0
offset_bottom = 40.0
columns = 3
script = ExtResource("3_btr6u")

[node name="CalcKeyContainer" type="GridContainer" parent="InputContainer/HBoxContainer"]
layout_mode = 2
columns = 3
script = ExtResource("4_h70he")

[node name="Clear" type="Button" parent="InputContainer"]
layout_mode = 2
offset_top = 93.0
offset_right = 180.0
offset_bottom = 124.0
text = "CLEAR"

[connection signal="submitted_input" from="InputContainer" to="." method="_input_submitted"]
[connection signal="pressed" from="InputContainer/Submit" to="InputContainer" method="_on_submit_pressed"]
[connection signal="number_selected" from="InputContainer/HBoxContainer/TenKeyContainer" to="InputContainer" method="_on_key_container_number_selected"]
[connection signal="number_selected" from="InputContainer/HBoxContainer/CalcKeyContainer" to="InputContainer" method="_on_key_container_number_selected"]
[connection signal="pressed" from="InputContainer/Clear" to="InputContainer" method="_on_clear_pressed"]
